# primelab

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml  release.yml
apps/cli/: package.json
apps/cli/src/: index.ts
crates/bindings-napi/: Cargo.toml  index.js  package.json
crates/bindings-napi/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/next_prime/: mod.rs
crates/core/src/prev_prime/: mod.rs
crates/core/src/primality/: mod.rs  util.rs
crates/core/src/utils/: arithmetic.rs
crates/core/tests/: primality_tests.rs
src/: lib.rs
src/factorization/: mod.rs  with_sieve.rs
src/next_prime/: mod.rs
src/prev_prime/: mod.rs
src/primality/: fermat.rs  miller_rabin.rs  mod.rs
src/sieve/: mod.rs
ui/: index.ts  main.mjs
