
[package]
authors = ["Sushant Ray <contact@neon.is-a.dev>"]
edition = "2021"
name = "primelab"
version = "0.1.0-alpha.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rand = "0.10.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
