[package]
authors = ["Sushant Ray <contact@neon.is-a.dev>"]
edition = "2021"
name    = "primelab-bindings-napi"
version = "0.2.0-alpha.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi          = "3.0.0"
napi-derive   = "3.0.0"
primelab-core = { path = "../core" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
